# AIR5021

./: .gitignore  launch.sh  run.txt  run_vlm_agent.sh  zzz.txt
src/sagittarius_arm_ros/sagittarius_perception/sagittarius_object_color_detector/: package.xml
src/sagittarius_arm_ros/sagittarius_perception/sagittarius_object_color_detector/config/: vision_config.yaml  vlm_grasp.yaml
src/sagittarius_arm_ros/sagittarius_perception/sagittarius_object_color_detector/launch/: vlm_prompt_grasp.launch
src/sagittarius_arm_ros/sagittarius_perception/sagittarius_object_color_detector/nodes/: sgr_ctrl.py  vlm_grasp_common.py  vlm_grasp_executor.py  vlm_grasp_planner.py
src/sagittarius_arm_ros/sagittarius_perception/sagittarius_object_color_detector/scripts/: test_openai_compatible_api.py
src/sagittarius_arm_ros/sagittarius_perception/sagittarius_vlm_cleaner/: CMakeLists.txt  README.md  package.xml
src/sagittarius_arm_ros/sagittarius_perception/sagittarius_vlm_cleaner/config/: clean_desk.yaml
src/sagittarius_arm_ros/sagittarius_perception/sagittarius_vlm_cleaner/launch/: vlm_clean_desk.launch
src/sagittarius_arm_ros/sagittarius_perception/sagittarius_vlm_cleaner/nodes/: clean_desk_common.py  clean_desk_executor.py  clean_desk_planner.py
src/sagittarius_arm_ros/sagittarius_perception/sagittarius_vlm_task_router/: CMakeLists.txt  README.md  package.xml
src/sagittarius_arm_ros/sagittarius_perception/sagittarius_vlm_task_router/config/: task_router.yaml
src/sagittarius_arm_ros/sagittarius_perception/sagittarius_vlm_task_router/launch/: vlm_task.launch
src/sagittarius_arm_ros/sagittarius_perception/sagittarius_vlm_task_router/nodes/: motion_task_executor.py  task_router_common.py  task_router_planner.py  vlm_task_executor.py
src/sagittarius_arm_ros/sagittarius_vlm_agent/: CMakeLists.txt  PLAN.md  README.md  package.xml  suggest.md
src/sagittarius_arm_ros/sagittarius_vlm_agent/config/: agent.yaml  camera_intrinsics.yaml  hand_eye_calibration.yaml  hand_eye_samples.yaml  verify_points_example.yaml
src/sagittarius_arm_ros/sagittarius_vlm_agent/launch/: calibration_bringup.launch  camera_intrinsics_calibration.launch  usb_cam.launch  vlm_agent.launch
src/sagittarius_arm_ros/sagittarius_vlm_agent/nodes/: agent_common.py  agent_planner.py  block_proposer.py  camera_intrinsics_calibration.py  hand_eye_calibration.py  hand_eye_calibration_tool.py  memory.py  motion_tools.py  object_selector.py  robot_tools.py  sgr_ctrl.py  test_hand_eye_calibration.py  tool_registry.py  vision_tools.py  vlm_agent_executor.py
test/: README.md  detect_block.py  propose_blocks.py
test/output/: summary.json
test/output_proposals/: summary.json
test/output_proposals_angle/: summary.json
