<?xml version="1.0"?>
<package format="2">
  <name>sagittarius_vlm_agent</name>
  <version>0.0.0</version>
  <description>Function-calling VLM agent for Sagittarius arm tabletop tasks</description>

  <maintainer email="robotics@example.com">robotics</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sagittarius_moveit</exec_depend>
  <exec_depend>sagittarius_object_color_detector</exec_depend>
  <exec_depend>sagittarius_vlm_cleaner</exec_depend>
  <exec_depend>sagittarius_vlm_task_router</exec_depend>
  <exec_depend>sdk_sagittarius_arm</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export/>
</package>
